--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@ngrx/store-devtools": "^17.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "@ngrx/router-store": "^17.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.3",
